# GitPulse

./: .env.example  .gitignore  CLAUDE.md  Commit-Driven Workflow Automation Analysis.md  Dockerfile  README.md  SPEC.md  agent-memory.md  business-process-and-semantic-summarization.md  development-workflow.md  docker-compose.yml  durability-and-fault-tolerance.md  error.md  implementation_plan.md  multi-agent-orchestration.md  observation.md  operational-boundaries.md  package-lock.json  package.json  path_to_test_generation_report.md  pyproject.toml  repository-assessment.md  research-doc.md  security-compliance-and-audit.md  system_audit_report.md  task.md  tasks.md  tasks.txt  tsconfig.json  visual-regression-testing-checks.md  visual-regression-testing.md  walkthrough.md  workflow_exporter_walkthrough.md
.claude/: settings.local.json
.github/workflows/: compliance.yml
.husky/: post-commit
dashboard/: Dockerfile  package-lock.json  package.json
docs/: architecture-v2.md  architecture.md
exports/workflow-generated/: state_machine_get_api_orders.json  state_machine_get_content_type.json  state_machine_get_syncing.json  workflow_get_api_orders.ts  workflow_get_content_type.ts  workflow_get_syncing.ts
prisma/: schema.prisma
prompthub/: branch-specific.md  branch-sys.md  git-auth.md  github-connection.md  imv-0.md  overview.md  plafrom-stable.md  repo-type-interface.md
scratch/: check-key.ts  check-tokens.ts  generate_pages.cjs  list_repos.ts
specs/core-platform/: plan.md  (+1 more)
src/: check_db.ts  index.ts  main.py  orders.py  server.ts  smoke_test.ts
(+134 files in other folders)
